# hs_gcp

./: .gitignore  main.py  pyproject.toml
cloud-run/: .gitignore  README.md
cloud-run/.github/workflows/: deploy.yml
cloud-run/function-extract/: main.py  requirements.txt
cloud-run/function-load/: main.py  requirements.txt
cloud-run/scripts/: create_scheduler.sh  deploy.sh  setup.sh
pub-sub/: README.md  deploy.sh
pub-sub/infra/: setup.sh
pub-sub/ingest/: main.py  pyproject.toml
pub-sub/negative-handler/: main.py  pyproject.toml
pub-sub/positive-handler/: Dockerfile  main.py  pyproject.toml
pub-sub/tests/: postman_collection.json
reverse-engineering/: README.md  coursera_courses.csv  main.py  pyproject.toml
reverse-engineering/src/reverse_engineering/: api.py  cli.py  config.py  storage.py  transform.py
scraper/: .gitignore  README.md  pyproject.toml
scraper/amazon_output/: amazon_mechanical_keyboard_20260504_193955.csv  amazon_mechanical_keyboard_20260506_174752.csv
scraper/src/scraper/: cli.py  config.py  driver.py  extractor.py  scraper.py  utils.py
