[project]
name = "reverse-engineering"
version = "0.1.0"
description = "Coursera API reverse engineering - fetch, transform, and load course data to GCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-storage>=3.10.1",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
]

[project.scripts]
coursera = "reverse_engineering.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
